--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.sds.dslibrary.lib.view.viewpager.DsDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.sds.dslibrary.lib.view.DsDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout_drawer"
     android:layout_width="match_parent"
@@ -41,4 +41,4 @@
 
     </FrameLayout>
 
-</com.sds.dslibrary.lib.view.viewpager.DsDrawerLayout>
+</com.sds.dslibrary.lib.view.DsDrawerLayout>
