--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:fitsSystemWindows="true"
-    app:minDrawerMargin="0">
+    app:minDrawerMargin_dp="0">
 
     <Button
         android:id="@+id/btn_open"
